# rust-jaxpr-interpreter

./: .gitignore  Cargo.toml  README.md  pyproject.toml
python/rust_jaxpr_interpreter/: __init__.py  rust_jaxpr_interpreter.pyi
python/tests/: test_all.py  test_optimistix.py
src/: boxed_slice.rs  interpreter.rs  jaxpr.rs  lib.rs
src/interpreter/: binary.rs  binary_primitives.rs  higher_order.rs  unary.rs  unary_primitives.rs
src/jaxpr/: binary.rs  binary_primitives.rs  higher_order.rs  unary.rs  unary_primitives.rs
