[package]
name = "rust-jaxpr-interpreter"
version = "0.1.0"
edition = "2024"
description = "Rust-based interpreter for JAX functions"
readme = "README.md"

[lib]
name = "rust_jaxpr_interpreter"
crate-type = ["cdylib"]

[dependencies]
enum_dispatch = "0.3.13"
ndarray = "0.17.2"
numpy = "0.28.0"
pyo3 = "0.28.2"
