[build-system]
requires = ["maturin>=1.12,<2.0"]
build-backend = "maturin"

[project]
name = "rust-jaxpr-interpreter"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version", "description", "readme"]
dependencies = ["jax>=0.4.13", "numpy>=2.4.2"]
[project.optional-dependencies]
tests = ["pytest", "optimistix"]
[tool.maturin]
python-source = "python"
